<resources>
    <string name="app_name">Secure Password management</string>
    <string name="master_lock_st_create_password">Create your master password</string>
    <string name="master_lock_st_master_password_greet">Welcome, enter your Master password</string>
    <!--Start NAV-->
    <string name="title_activity_home">Password Manager</string>
    <string name="title_activity_settings">Settings</string>


    <string name="random_password_generator">Random password generator</string>
    <!--END-->
    <!--INTRO SLIDE-->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_desc">The easiest way to store your passwords for every website or application you want!</string>
    <string name="slide_2_title">Offline</string>
    <string name="slide_2_desc">Your data is stored only on your device.</string>
    <string name="slide_3_title">Strong Encryption</string>
    <string name="slide_3_desc">We use the strongest encryption available to secure your data!</string>
    <string name="slide_4_title">Open Source</string>
    <string name="slide_4_desc">We are open source. That means full transparency!</string>
    <!--END-->
    <!-- LOCK  -->
    <string name="auth">Authenticate with fingerprint</string>

    <!-- Preference Titles -->
    <string name="security">Security</string>
    <string name="data">Data</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>


    <!-- Security Preferences -->
    <string name="ask_password_before_launch">Ask password before launch</string>
    <string name="change_master_password">Change master password</string>
    <string name="scm_description">Disables updates, copy to clipboard and screenshots in the app</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_logout">Logout</string>
    <string name="copy_code">copy</string>
    <string name="Refresh">refresh</string>
    <string name="add_record">Add</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="empty_list_text">No data found</string>
    <string name="version">Version 0.1.2</string>
    <string name="Github">Github Link</string>
    <string name="check_update">Check for updates</string>
    <string name="update">Update</string>
    <string name="data_restore">Restore data</string>
    <string name="data_export">Export data</string>
    <string name="data_delete">Delete all data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="use_dark_theme">Use dark theme</string>
    <string name="about_app">About app</string>
    <string name="recommended_master_password">Master password is recommended for more security</string>
    <string name="use_password">Use master password</string>
    <string name="use_pin_code">Use PIN code</string>
    <string name="permission_required">Permission required</string>
    <string name="entry_deleted">Entry deleted</string>
    <string name="entry_saved">Entry saved</string>

    <string name="biometric_prompt_title">Fingerprint Authentication</string>
    <string name="biometric_prompt_description">Place your finger on the sensor to authenticate</string>
    <string name="biometric_prompt_button_cancel">Cancel</string>
    <string name="confirm_title">Alert message</string>
    <string name="confirm_possible_button">Yes</string>
    <string name="confirm_delete_message">Are you sure you want to delete?</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>

    <!--END-->
</resources>