<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ModifyActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:text="Tap on Email/Password to copy" />

    <LinearLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:onClick="copy_email"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/layout_action1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="Email"
                android:textSize="@dimen/text_medium_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_action2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1.5">
<!--            android:background="@android:color/transparent"-->
            <EditText
                android:id="@+id/modify_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_view_size"

                android:enabled="false"
                android:gravity="center_vertical"
                android:hint="Email@securebox.com"
                android:textSize="@dimen/text_medium_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:onClick="copy_password"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="Password"
                android:textSize="@dimen/text_medium_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1.5">

            <EditText
                android:id="@+id/modify_old_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_view_size"
                android:enabled="false"
                android:gravity="center_vertical"
                android:hint="PASSWORD"
                android:inputType="textPassword"
                android:textSize="@dimen/text_medium_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:onClick="copy_password"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="3"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/layout_action4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="Confirm"
                android:textSize="@dimen/text_medium_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/change_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1.5">

            <EditText
                android:id="@+id/modify_new_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_view_size"
                android:autofillHints="false"
                android:hint="New password"
                android:inputType="textPassword"
                android:maxLength="32"
                android:maxLines="1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/show_password_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:layout_marginStart="10dp"
            android:checked="false"
            android:fontFamily="@font/capriola"
            android:text="Show password" />

        <CheckBox
            android:id="@+id/modify_show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:layout_marginStart="10dp"
            android:checked="false"
            android:text="Show confirm password"
            android:visibility="gone"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/modify_update"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape_capsule_safe"
            android:fontFamily="@font/capriola"
            android:text="@string/btn_update"
            android:textColor="@color/dot_dark_screen2" />

        <Button
            android:id="@+id/modify_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape_capsule_safe"
            android:fontFamily="@font/capriola"
            android:text="@string/btn_save"
            android:textColor="@color/dot_dark_screen2"
            android:visibility="gone" />

        <Button
            android:id="@+id/modify_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape_capsule_danger"
            android:fontFamily="@font/capriola"
            android:text="@string/btn_cancel"
            android:textColor="@color/dot_dark_screen1"
            android:visibility="gone" />

        <Button
            android:id="@+id/modify_delete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape_capsule_danger"
            android:fontFamily="@font/capriola"
            android:text="@string/btn_delete"
            android:textColor="@color/dot_dark_screen1" />
    </LinearLayout>

    <Button
        android:id="@+id/change_password_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_shape_capsule_safe"
        android:fontFamily="@font/capriola"
        android:text="Change password"
        android:textColor="@color/purple_700" />

</LinearLayout>